--- a/notebook.py.ipynb
+++ b/notebook.py.ipynb
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lotus is class 0\n",
+      "Tulip is class 1\n",
+      "Orchid is class 2\n",
+      "Lilly is class 3\n",
+      "Sunflower is class 4\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -86,7 +97,7 @@
        "4  flower_images/Lotus/c8e4698aa0.jpg     Lotus       0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,11 +124,15 @@
     "    # get all images in the subfolder\n",
     "    images = [f.path for f in os.scandir(subfolder) if f.is_file()]\n",
     "\n",
+    "    class_name = os.path.basename(subfolder)\n",
+    "\n",
     "    # create a data frame for the subfolder\n",
     "    df = pd.DataFrame(columns=['filepath', 'classname', 'classid'])\n",
     "    df['filepath'] = images\n",
-    "    df['classname'] = os.path.basename(subfolder)\n",
+    "    df['classname'] = class_name\n",
     "    df['classid'] = i\n",
+    "\n",
+    "    print(f'{class_name} is class {i}')\n",
     "\n",
     "    # append the subfolder data frame to the main data frame\n",
     "    frame = pd.concat([frame, df], ignore_index=True)\n",
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +230,7 @@
        "torch.Size([3, 224, 224])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +339,7 @@
     "    )\n",
     "    self.flatten = nn.Flatten()\n",
     "    self.classifier = nn.Sequential(\n",
-    "      DenseUnit(12544, 1024, droupout=0.2),\n",
+    "      DenseUnit(50176, 1024, droupout=0.2),\n",
     "      DenseUnit(1024, 256, droupout=0.2),\n",
     "      DenseUnit(256, 64, droupout=0.2),\n",
     "      DenseUnit(64, 5),\n",
@@ -349,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,14 +449,14 @@
     "    else:\n",
     "      _, accuracy = self.validation_history[-1]\n",
     "      name = f'model_{accuracy:.4f}.pth'\n",
-    "    path = os.path.join(parent_dir, 'model.pth')\n",
+    "    path = os.path.join(parent_dir, name)\n",
     "    state = self.model.state_dict()\n",
     "    torch.save(state, path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,72 +491,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: loss=1.4182804023742677, accuracy=0.5232000350952148\n",
-      "Epoch 2: loss=1.3341190546035766, accuracy=0.6386000514030457\n",
-      "Epoch 3: loss=1.273484115409851, accuracy=0.7062000632286072\n",
-      "Epoch 4: loss=1.2116063285827636, accuracy=0.7714000344276428\n",
-      "Epoch 5: loss=1.1578969974517823, accuracy=0.8270000219345093\n",
-      "Epoch 6: loss=1.1172088399887086, accuracy=0.8628000617027283\n",
-      "Epoch 7: loss=1.088782986831665, accuracy=0.8872000575065613\n",
-      "Epoch 8: loss=1.2475191577911378, accuracy=0.6856000423431396\n",
-      "Epoch 9: loss=1.1222258472442628, accuracy=0.8336000442504883\n",
-      "Epoch 10: loss=1.0886648063659667, accuracy=0.8650000691413879\n"
+      "Epoch 1: loss=1.427453416824341, accuracy=0.5202000141143799\n",
+      "Epoch 2: loss=1.3411365798950194, accuracy=0.6220000386238098\n",
+      "Epoch 3: loss=1.2772780269622803, accuracy=0.6972000598907471\n"
      ]
     }
    ],
    "source": [
-    "trainer.train(train_loader, epochs=10)"
+    "trainer.train(train_loader, epochs=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation: loss=1.0318425260543824, accuracy=0.9162000417709351\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tikhon/Documents/flowers/.venv/lib/python3.11/site-packages/torch/_tensor_str.py:115: UserWarning: MPS: nonzero op is supported natively starting from macOS 13.0. Falling back on CPU. This may have performance implications. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/mps/operations/Indexing.mm:218.)\n",
-      "  nonzero_finite_vals = torch.masked_select(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1.0318425260543824, tensor(0.9162, device='mps:0'))"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.validate(test_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.validation_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "trainer.save_model('models')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_history(trainer.train_history, 'Train')"
    ]
   }
  ],
